trying to fix bug with grid on ios

--- a/src/components/modules/ProjectCard/ProjectCard.module.scss
+++ b/src/components/modules/ProjectCard/ProjectCard.module.scss
@@ -111,9 +111,7 @@
 }
 
 .wrapperGrid {
-    @media (max-width: $md) {
-        height: auto;
-    }
+    height: auto;
 }
 
 .blockSmall {
